--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
 		<!-- Google Font -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap"
-			rel="stylesheet"
-		/>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap"rel="stylesheet"/>
+		<link rel="shortcut icon" href="assets/images/sticker_4.gif" type="image/x-icon">
 		<!-- Style sheets links -->
 		<link rel="stylesheet" href="reset.css" />
 		<link rel="stylesheet" href="styles.css" />
@@ -32,7 +30,7 @@
 		<main class="main-container">
 			<section class="title-container">
 				<span class="logo">
-					<img src="assets/images/duck2.png" alt="logo" />
+					<img src="assets/images/sticker_9.gif" alt="logo" />
 				</span>
 				<h1>Odd Duck</h1>
 			</section>
@@ -40,7 +38,7 @@
 				<div class="result-container">
 					<h3>Results: <span class="total-views"></span></h3>
 					<p class="results-text">
-						-> will be shown at the end, after 25 views
+						
 					</p>
 					<ul class="result-list"></ul>
 				</div>
@@ -51,16 +49,7 @@
 				</div>
 				<div class="text-container">
 					<p>
-						Welcome to our online store, your ultimate destination for all your
-						shopping needs! Explore our vast selection of bags, chairs, boots,
-						dog supplies, and other premium products designed to enhance your
-						lifestyle. From trendy and stylish bags to comfortable and durable
-						chairs, we have something for everyone. Our collection also includes
-						a wide range of boots and accessories for all seasons. Plus, we have
-						a dedicated section for dog lovers with premium supplies for your
-						furry friends. Enjoy free shipping on orders over $50 and elevate
-						your essentials with us today! Shop now and experience top-quality
-						products and exceptional customer service.
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus harum facere recusandae illum qui repudiandae debitis est corrupti placeat consequatur quas aperiam incidunt tenetur veritatis, velit esse neque reiciendis ipsum cupiditate quibusdam in labore quod iusto id. Inventore incidunt optio aperiam quos perspiciatis ab harum aut, nisi provident similique earum perferendis cum iste pariatur ut labore quas quis numquam quisquam id dolorem debitis deleniti! Obcaecati tenetur illo sit dolores ipsa.
 					</p>
 				</div>
 			</section>
@@ -70,7 +59,7 @@
 		</main>
 		<!-- FOOTER -->
 		<footer class="footer-container container-center">
-			<p class="footer">&copy 2023 VMOG</p>
+			<p class="footer">&copy 2023 Daniel Quilo</p>
 		</footer>
 		<!-- Link app.js -->
 		<script src="app.js"></script>
