--- a/index.html
+++ b/index.html
@@ -20,11 +20,18 @@
 		<!-- Style sheets links -->
 		<link rel="stylesheet" href="reset.css" />
 		<link rel="stylesheet" href="styles.css" />
-	</head>
+		<script src="dark.js" defer></script>
 	<body>
+		<h1> Light and Dark</h1>
+		<div>
+		  <input type="checkbox" name="Change-theme" id="change-theme">
+		  <label for="change-theme">
+		    <i class="bi bi-sun"></i>
+		    <i class="bi bi-moon"></i>
+		  </label>
 		<!-- HEADER -->
 		<header class="header-container">
-			<h3>Lab: Class 11: Click on your favorite product</h3>
+			<h3>Lab: Class 11: </h3>
 		</header>
 		<!-- MAIN -->
 		<main class="main-container">
