--- a/index.html
+++ b/index.html
@@ -1,76 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- Meta data SEO-->
-		<meta name="title" content="Odd Duck Product Co" />
-		<meta
-			name="description"
-			content="Discover a wide range of high-quality bags, chairs, boots, dog supplies, and more at our online store. Shop now for stylish and functional products to elevate your lifestyle. Free shipping on orders over $50."
-		/>
-		<!-- Web Title -->
-		<title>Odd Duck</title>
-		<!-- Google Font -->
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap"rel="stylesheet"/>
-		<link rel="shortcut icon" href="assets/images/sticker_4.gif" type="image/x-icon">
-		<!-- Style sheets links -->
-		<link rel="stylesheet" href="reset.css" />
-		<link rel="stylesheet" href="styles.css" />
-		<script src="dark.js" defer></script>
-	<body>
-		<h1> Light and Dark</h1>
-		<div>
-		  <input type="checkbox" name="Change-theme" id="change-theme">
-		  <label for="change-theme">
-		    <i class="bi bi-sun"></i>
-		    <i class="bi bi-moon"></i>
-		  </label>
-		<!-- HEADER -->
-		<header class="header-container">
-			<h3>Lab: Class 11: </h3>
-		</header>
-		<!-- MAIN -->
-		<main class="main-container">
-			<section class="title-container">
-				<span class="logo">
-					<img src="assets/images/sticker_9.gif" alt="logo" />
-				</span>
-				<h1>Odd Duck</h1>
-			</section>
-			<section class="section-container">
-				<div class="result-container">
-					<h3>Results: <span class="total-views"></span></h3>
-					<p class="results-text">
-						
-					</p>
-					<ul class="result-list"></ul>
-				</div>
-				<div class="images-container">
-					<img class="img-1" />
-					<img class="img-2" />
-					<img class="img-3" />
-				</div>
-				<div class="text-container">
-					<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus harum facere recusandae illum qui repudiandae debitis est corrupti placeat consequatur quas aperiam incidunt tenetur veritatis, velit esse neque reiciendis ipsum cupiditate quibusdam in labore quod iusto id. Inventore incidunt optio aperiam quos perspiciatis ab harum aut, nisi provident similique earum perferendis cum iste pariatur ut labore quas quis numquam quisquam id dolorem debitis deleniti! Obcaecati tenetur illo sit dolores ipsa.
-					</p>
-				</div>
-			</section>
-			<section class="chart-container">
-				<canvas id="chart"></canvas>
-			</section>
-		</main>
-		<!-- FOOTER -->
-		<footer class="footer-container container-center">
-			<p class="footer">&copy 2023 Daniel Quilo</p>
-		</footer>
-		<!-- Link app.js -->
-		<script src="app.js"></script>
-		<!-- Link CDN charts.js  -->
-		<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-	</body>
+<head>
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!-- Meta data SEO-->
+<meta name="title" content="Odd Duck Product Co" />
+<meta
+name="description"
+content="Discover a wide range of high-quality bags, chairs, boots, dog supplies, and more at our online store. Shop now for stylish and functional products to elevate your lifestyle. Free shipping on orders over $50."
+/>
+<!-- Web Title -->
+<title>Odd Duck</title>
+<!-- Google Font -->
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap"rel="stylesheet"/>
+<link rel="shortcut icon" href="assets/images/sticker_4.gif" type="image/x-icon">
+<!-- Style sheets links -->
+<link rel="stylesheet" href="reset.css" />
+<link rel="stylesheet" href="styles.css" />
+<script src="dark.js" defer></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+<body>
+<h1> Light and Dark</h1>
+<div>
+<input type="checkbox" name="Change-theme" id="change-theme">
+<label for="change-theme">
+<i class="bi bi-sun"></i>
+<i class="bi bi-moon"></i>
+</label>
+<!-- HEADER -->
+<header class="header-container">
+<h3>Lab = 11 </h3>
+</header>
+<!-- MAIN -->
+<main class="main-container">
+<section class="title-container">
+<span class="logo">
+<img src="assets/images/sticker_9.gif" alt="logo" />
+</span>
+<h1></h1>
+<nav>
+	<a href="#">201-01</a>
+	<a href="#">201-02</a>
+	<a href="#">201-03</a>
+	<a href="#">201-04</a>
+	<a href="#">201-05</a>
+	<a href="#">201-06</a>
+	<a href="#">201-07</a>
+	<a href="#">201-08</a>
+	<a href="#">201-09</a>
+	<a href="#">201-10</a>
+	<a href="#">201-11</a>
+	<a href="#">201-12</a>
+	<a href="#">201-13</a>
+	<a href="#">201-14</a>
+	<a href="#">15</a>
+
+</nav>
+<span class="logo">
+	<img src="assets/images/sticker_9.gif" alt="logo" />
+	</span>
+</section>
+<section class="section-container">
+<div class="result-container">
+<h3>Results: <span class="total-views"></span></h3>
+<p class="results-text">
+
+</p>
+<ul class="result-list"></ul>
+</div>
+<div class="images-container">
+<img class="img-1" />
+<img class="img-2" />
+<img class="img-3" />
+</div>
+<div class="text-container">
+<p>
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus harum facere recusandae illum qui repudiandae debitis est corrupti placeat consequatur quas aperiam incidunt tenetur veritatis, velit esse neque reiciendis ipsum cupiditate quibusdam in labore quod iusto id. Inventore incidunt optio aperiam quos perspiciatis ab harum aut, nisi provident similique earum perferendis cum iste pariatur ut labore quas quis numquam quisquam id dolorem debitis deleniti! Obcaecati tenetur illo sit dolores ipsa.
+</p>
+</div>
+</section>
+<section class="chart-container">
+<canvas id="chart"></canvas>
+</section>
+</main>
+<!-- FOOTER -->
+<footer class="footer-container container-center">
+<p class="footer">&copy 2023 Daniel Quilo</p>
+</footer>
+<!-- Link app.js -->
+<script src="app.js"></script>
+<!-- Link CDN charts.js  -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+</body>
 </html>
