--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@ content="Discover a wide range of high-quality bags, chairs, boots, dog supplies
 <script src="dark.js" defer></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
 <body>
-<h1> Light and Dark</h1>
+
 <div>
-<input type="checkbox" name="Change-theme" id="change-theme">
-<label for="change-theme">
-<i class="bi bi-sun"></i>
-<i class="bi bi-moon"></i>
-</label>
+	<input type="checkbox" name="Change-theme" id="change-theme">
+	<label for="change-theme">
+	<i class="bi bi-sun"> Light</i>
+	<i class="bi bi-moon"> Dark</i>
+	</label>
+</div>
 <!-- HEADER -->
 <header class="header-container">
-<h3>Lab = 11 </h3>
+<h1> Odd Duck </h3>
 </header>
 <!-- MAIN -->
 <main class="main-container">
@@ -40,31 +41,13 @@ content="Discover a wide range of high-quality bags, chairs, boots, dog supplies
 <span class="logo">
 <img src="assets/images/sticker_9.gif" alt="logo" />
 </span>
-<h1></h1>
-<nav>
-	<a href="#">201-01</a>
-	<a href="#">201-02</a>
-	<a href="#">201-03</a>
-	<a href="#">201-04</a>
-	<a href="#">201-05</a>
-	<a href="#">201-06</a>
-	<a href="#">201-07</a>
-	<a href="#">201-08</a>
-	<a href="#">201-09</a>
-	<a href="#">201-10</a>
-	<a href="#">201-11</a>
-	<a href="#">201-12</a>
-	<a href="#">201-13</a>
-	<a href="#">201-14</a>
-	<a href="#">15</a>
-
-</nav>
 <span class="logo">
 	<img src="assets/images/sticker_9.gif" alt="logo" />
 	</span>
 </section>
 <section class="section-container">
 <div class="result-container">
+	
 <h3>Results: <span class="total-views"></span></h3>
 <p class="results-text">
 
@@ -88,7 +71,12 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus harum fac
 </main>
 <!-- FOOTER -->
 <footer class="footer-container container-center">
-<p class="footer">&copy 2023 Daniel Quilo</p>
+	<span class="logo">
+		<img src="assets/images/sticker_9.gif" alt="logo" />
+		</span>
+<p class="footer">&copy 2023 Daniel Quilo</p> <span class="logo">
+	<img src="assets/images/sticker_9.gif" alt="logo" />
+	</span>
 </footer>
 <!-- Link app.js -->
 <script src="app.js"></script>
